--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
         <artifactId>jfreechart</artifactId>
         <version>1.5.3</version>
     </dependency>
+    <dependency>
+    <groupId>com.opencsv</groupId>
+    <artifactId>opencsv</artifactId>
+    <version>5.9</version>
+</dependency>
 </dependencies>
 
 </project>
